# mastermind

./: .gitignore  LICENSE  README.md
python/: setup.py
python/mastermind/: __init__.py
python/tests/: test_results.py
rust/: Cargo.toml
rust/src/: main.rs
