[package]
name = "mastermind"
version = "0.2.1"
edition = "2021"
authors = ["Michael Stella <michael@jwplayer.com>"]
description = "A game"

[[bin]]
name = "mastermind"
path = "src/main.rs"

[dependencies]
ansi_term       = "0.12"
rand            = ">=0.8.6"
random_choice   = "*"
promptly        = "0.3"
clap            = { version = "4.5.4", features = ["derive"] }
